modal jumping to top fix

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -238,7 +238,7 @@
 .modal-background {
     position: fixed;
     z-index: 200; 
-    top: 5em;
+    top: 0;
     width: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
@@ -283,7 +283,7 @@
 body.active {
     overflow: hidden;
     height: 100vh;
-    position: fixed;
+    position: absolute;
 }
 
 .resume-download-btn {
